== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>


== 2024-01-08 Light and dark mode support
<p>Light/Dark mode themes have been reworked and now comprehensively cover most of the application.</p>
<p>The modes can be accessed via SetUp -&gt; Options -&gt; Appearance -&gt; Look and Feel -&gt; FlatLaf Light/FlatLaf Dark respectively.</p>

== 2023-11-15 Rename graphs through REST API and Jupyter Notebooks
<p>Jupyter notebook users can now specify or change Constellation graph title names within scripts using the client.</p>
<p>When creating a new graph <strong>new_graph</strong> the graph name can be specified as an optional parameter. There's also a separate function to rename a graph specified by the graph ID <strong>rename_graph</strong>. If a graph ID is not specified, the current active graph will be renamed.</p> 
<p>For more information refer to the documentation by going to Tools &gt; Display REST Server Documentation.</p>

== 2023-09-28 Hide empty attributes in the Attribute Editor View
<p>The Attribute Editor view now allows for empty (null) attributes to be hidden to de-clutter the view.</p>
<p>The heading of each attribute category has replaced the "Show all" toggle with a "Show Hidden" toggle and a new "Show Empty" toggle has been added. The "Show Empty" toggle is enabled each time Constellation is restarted to ensure users make a conscious decision to hide them.</p>
<p>Attributes that are marked as hidden will only be shown if the "Show Hidden" toggle is enabled while attributes that have no value set (and are empty) will only be shown if the "Show Empty" toggle is enabled. Hidden and empty attributes require both toggles to be enabled.</p>

== 2023-08-28 Markdown support in the Notes View