@@ -6,3 +6,4 @@ DataAccessViewCategoryPanel.buttonRight.text=>
 DataAccessViewCategoryPanel.buttonLeft.text=<
 DataAccessViewCategoryPanel.buttonUp.text=^
 DataAccessViewCategoryPanel.buttonDown.text=v
+DataAccessViewCategoryPanel.buttonRestore.text=Restore to Default
